fixed outcomes quote css. removed student registration header. made minor spacing adjustments throughout site.

--- a/AWS/src/components/OldOutcomes/OldOutcomesContent.css
+++ b/AWS/src/components/OldOutcomes/OldOutcomesContent.css
@@ -8,6 +8,7 @@
 .oldOutcomesContainer{
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 }
 .oldOutcomesCard{
     margin-bottom: 30px;
