--- a/AWS/src/components/Outcomes/OutcomesContent.css
+++ b/AWS/src/components/Outcomes/OutcomesContent.css
@@ -34,9 +34,14 @@
 }
 
 .transOrange:hover{
-    background-color: rgb(0, 0, 0);
+    background-color:rgba(255, 153, 0, 1);
+
 }
 
 .transPurple:hover{
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(133,84,156, 1);
+}
+
+.removePadding{
+    padding: 0px;
 }
